<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="249dp"
        android:layout_height="28dp"
        android:layout_marginTop="40dp"
        android:max="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.401"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedValue" />

    <Button
        android:id="@+id/bt_generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_label2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <TextView
        android:id="@+id/tv_min"
        android:layout_width="76dp"
        android:layout_height="30dp"
        android:layout_marginTop="56dp"
        android:text="@string/minimumLabel"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/tv_max"
        android:layout_width="71dp"
        android:layout_height="34dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/maximumLabel"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_min" />

    <TextView
        android:id="@+id/tv_ave"
        android:layout_width="78dp"
        android:layout_height="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/averageLabel"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_max" />

    <TextView
        android:id="@+id/maxValue"
        android:layout_width="192dp"
        android:layout_height="39dp"
        android:layout_marginTop="28dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toEndOf="@+id/tv_max"
        app:layout_constraintTop_toBottomOf="@+id/minValue" />

    <TextView
        android:id="@+id/avgValue"
        android:layout_width="182dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toEndOf="@+id/tv_ave"
        app:layout_constraintTop_toBottomOf="@+id/maxValue" />

    <TextView
        android:id="@+id/minValue"
        android:layout_width="199dp"
        android:layout_height="44dp"
        android:layout_marginTop="52dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toEndOf="@+id/tv_min"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/tv_selected"
        android:layout_width="154dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/selectedLabel"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selectedValue"
        android:layout_width="85dp"
        android:layout_height="24dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_selected"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="150dp"
        android:layout_height="175dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avgValue" />
</androidx.constraintlayout.widget.ConstraintLayout>